Feat/group by name (#8)
* feat: identify groups by their name rather than an autogenerated id

* fix: assume service is running behind the gateway

* refactor: update scripts to use group name rather than group id

* docs: update description for the sake of consistency

* refactor: preload cluster configuration
